--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap");
-.parent {
+body{
   background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+}
+.parent {
   width:100%;
   height: 100%;
 
